--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>CV Using HTML & CSS</title>
+    <title>CV - Terry Cai</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -12,85 +12,66 @@
     <div class="photo-and-name">
         <img src="profile.png" class="photo" alt="Profile Picture">
         <div class="contact-info-box">
-            <h1 class="name">Muhammad Owais</h1>
+            <h1 class="name">Terry Cai</h1>
             <br>
-            <h3 class="job-title">IT Manager</h3>
-            <p class="contact-details">Phone: +92-344-4XX3-1XX &nbsp; - &nbsp; Email: contact@muhammadovi.com</p>
+            <h3 class="job-title">Entrepreneur & Innovation Enthusiast</h3>
+            <p class="contact-details">Phone: (+1) 415-370-3170 &nbsp; - &nbsp; Email: tcai9@dons.usfca.edu</p>
+            <p class="contact-details">LinkedIn: <a href="https://www.linkedin.com/in/terry-cai2000" target="_blank">terry-cai2000</a></p>
         </div>
     </div>
     <div id="objective">
         <h3>Objective</h3>
         <p>
-            To take a challenging and managerial role in the field of Computer programming and implement the expertise and experience gained in this field to develop complex project with efficiency and quality. 
+            To leverage my expertise in business administration, entrepreneurship, and financial analysis to drive 
+            innovation and strategic growth in a dynamic organization.
         </p>
     </div>
     <div id="education">
         <h3>Education</h3>
         <table>
-            <tr class="school-1">
-                <td rowspan="2">2002 - 2015</td>
-                <td><b>School-1</b>: ABC School (Standard KG-VIII)</td>
-            </tr>
-            <tr class="school-2">
-                <td><b>School-2</b>: XYZ School (Standard IX-X)</td>
-            </tr>
-            
-            <tr class="school-1">
-                <td rowspan="2">2012 - 2014</td>
-                <td><b>ACCESS</b>: English Micro Scholarship Program by US Consolate</td>
-            </tr>
-            <tr class="school-2">
-                <td><b>The Professional's Academy</b>: Web Designing (HTML, CSS, JS, Bootstrap)</td>
-            </tr>
-            
             <tr>
-                <td style="width: 120px; color: gray;">2015 - 2017</td>
-                <td><b>Intermediate</b>: Board of Intermediate Karachi - Private</td>
+                <td>August 2025</td>
+                <td><b>Master of Science</b>, Entrepreneurship and Innovation - University of San Francisco</td>
+            </tr>
+            <tr>
+                <td>May 2024</td>
+                <td><b>Bachelor of Business Administration</b>, Global Business - Hong Kong University of Science and Technology</td>
             </tr>
         </table>
     </div>
     <div id="work">
         <h3>Experience</h3>
         <table>
-            <tr class="work-1">
-                <td>2014 - 2015</td>
-                <td><b>ABC Corp</b>: As an IT Manager and Call Service Representative</td>
+            <tr>
+                <td>January 2020 - Present</td>
+                <td><b>Shantou Zhenchuang Plastic Industrial</b>: General Manager</td>
             </tr>
-            <tr class="work-2">
-                <td>2015 - Present</td>
-                <td><b>Reliable Punching</b>: More than 2 years' experience as an IT Manager and Customer Service Representative</td>
+            <tr>
+                <td>January 2024 - June 2024</td>
+                <td><b>Sa Sa International Holdings</b>: Student Consultant (HKUST GBUS Capstone Project)</td>
             </tr>
- 
+            <tr>
+                <td>October 2020 - December 2020</td>
+                <td><b>Guotai Junan Securities</b>: Investment Banking Intern</td>
+            </tr>
+            <tr>
+                <td>July 2020 - August 2020</td>
+                <td><b>GuangFa Securities</b>: Sales Department Intern</td>
+            </tr>
         </table>
     </div>
-    <div id="bio-data">
-        <h3>Bio-Data</h3>
-        <table>
-            <tr>
-                <td>F'Name:</td>
-                <td><b>Naseem Akhter</b></td>
-            </tr>
-            <tr>
-                <td>Date of Birth:</td>
-                <td><b>25<sup>th</sup> November 1996</b></td>
-            </tr>
-            <tr>
-                <td>CNIC:</td>
-                <td><b>42401-XXXXXXX-7</b></td>
-            </tr>
-            <tr>
-                <td>Religion:</td>
-                <td><b>Islam</b></td>
-            </tr>
-            <tr>
-                <td>Nationality:</td>
-                <td><b>Pakistani</b></td>
-            </tr>
-            <tr>
-                <td>Marital Status:</td>
-                <td><b>Unmarried</b></td>
-            </tr>
-        </table>
+    <div id="skills">
+        <h3>Skills</h3>
+        <ul>
+            <li>Microsoft Office, Crunchbase, LSEG, Merger Market, Bloomberg Terminal, Python</li>
+            <li>Trilingual: English, Mandarin, Cantonese</li>
+        </ul>
+    </div>
+    <div id="interests">
+        <h3>Interests</h3>
+        <ul>
+            <li>Golf, Traveling, Cross-Country, Hiking, R&B Music, Volleyball, Chinese Art Paintings</li>
+        </ul>
     </div>
 </div>
 
