--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
             <p class="contact-details">LinkedIn: <a href="https://www.linkedin.com/in/terry-cai2000" target="_blank">terry-cai2000</a></p>
         </div>
     </div>
-    <div id="objective">
+    <div id="objective" class="section-box">
         <h3>Objective</h3>
         <p>
             To leverage my expertise in business administration, entrepreneurship, and financial analysis to drive 
             innovation and strategic growth in a dynamic organization.
         </p>
     </div>
-    <div id="education">
+    <div id="education" class="section-box">
         <h3>Education</h3>
         <table>
             <tr>
@@ -39,7 +39,7 @@
             </tr>
         </table>
     </div>
-    <div id="work">
+    <div id="work" class="section-box">
         <h3>Experience</h3>
         <table>
             <tr>
@@ -63,14 +63,14 @@
     <div id="skills">
         <h3>Skills</h3>
         <ul>
-            <li>Microsoft Office, Crunchbase, LSEG, Merger Market, Bloomberg Terminal, Python</li>
-            <li>Trilingual: English, Mandarin, Cantonese</li>
+            <li><b>Microsoft Office, Crunchbase, LSEG, Merger Market, Bloomberg Terminal, Python</b></li>
+            <li><b>Trilingual: English, Mandarin, Cantonese</b></li>
         </ul>
     </div>
     <div id="interests">
         <h3>Interests</h3>
         <ul>
-            <li>Golf, Traveling, Cross-Country, Hiking, R&B Music, Volleyball, Chinese Art Paintings</li>
+            <li><b>Golf, Traveling, Cross-Country, Hiking, R&B Music, Volleyball, Chinese Art Paintings</b></li>
         </ul>
     </div>
 </div>
