--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    
 <div id="page">
     <div class="photo-and-name">
-        <img src="profile.png" class="photo" alt="Profile Picture">
+        <img src="WhatsApp Image 2022-03-10 at 21.41.21.jpeg" class="photo" alt="Profile Picture">
         <div class="contact-info-box">
             <h1 class="name">Terry Cai</h1>
             <br>
